--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -44,6 +44,13 @@ D: Add a new, GPU-enabled, node pool to the GKE cluster. Ask your ML team to add
 
 Answer: D
 
+- [GKE] -> [Cluster:node(vm), node(vm), node(vm)] -> [node(vm):pod(container),pod(container),pod(container)]
+- To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.[1]
+
+**Links:**
+
+1. https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#create
+
 <hr />
 
 **Question 103**
@@ -73,6 +80,9 @@ C: Create a CSV sheet with all users' email addresses. Use the gcloud command li
 D: In the G Suite console, add the users to a special group called cloud-console-users@yourdomain.com. Rely on the default behavior of the Cloud Platform to grant users access if they are members of this group.
 
 Answer: B
+
+- G Suite is now Google Workspace
+- The Organization resource is closely associated with a Google Workspace or Cloud Identity account.
 
 <hr />
 
@@ -134,6 +144,10 @@ D: Add a network tag of your choice to the instance running the LDAP server. Cre
 
 Answer: C
 
+- Tags enable you to make firewall rules and routes applicable to specific VM instances.
+
+https://cloud.google.com/vpc/docs/add-remove-network-tags
+
 <hr />
 
 **Question 109**
@@ -177,8 +191,7 @@ D: Start the VM using Compute Engine default settings, and adjust as you go base
 
 Answer: A
 
-Reference Links
-https://www.examtopics.com/exams/google/associate-cloud-engineer/view/23/
+https://cloud.google.com/compute/docs/machine-resource#machine_type_comparison
 
 <hr />
 
@@ -455,6 +468,19 @@ D: Add the user to roles/iam.serviceAccountAdmin role.
 
 Answer: D
 
+**Service Account User (roles/iam.serviceAccountUser)**
+
+- Run operations as the service account.
+
+**Service Account Admin (roles/iam.serviceAccountAdmin)**
+
+- To fully manage (view, create, update, disable, enable, delete, undelete, and manage access to) service accounts:
+
+**Links:**
+
+1. https://cloud.google.com/iam/docs/understanding-roles#service-accounts-roles
+2. https://cloud.google.com/iam/docs/creating-managing-service-accounts
+
 <hr />
 
 Question 128
@@ -485,9 +511,16 @@ D: Create a node pool of instances with GPUs, and enable autoscaling on this nod
 
 Answer: D
 
+- Creating an autoscaling GPU node pool
+  To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.
+
+**Links:**
+
+https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#gpu_pool
+
 <hr />
 
-Question 130
+**Question 130:**
 Your organization has user identities in Active Directory. Your organization wants to use Active Directory as their source of truth for identities. Your organization wants to have full control over the Google accounts used by employees for all Google services, including your Google Cloud Platform (GCP) organization. What should you do?
 
 A: Use Google Cloud Directory Sync (GCDS) to synchronize users into Cloud Identity.
@@ -499,6 +532,13 @@ C: Export users from Active Directory as a CSV and import them to Cloud Identity
 D: Ask each employee to create a Google account using self signup. Require that each employee use their company email address and password.
 
 Answer: A
+
+https://cloud.google.com/architecture/identity/federating-gcp-with-active-directory-synchronizing-user-accounts
+
+- A - correct. Best practice is to create a new project for each environment, such as production and testing. There are no routes between VPCs in these projects by default, so that satisfies the requirement by the security team.
+- B. Nope. not best practice and allows communication.
+- C. While this is best practice to create a new project for a different environment, it explicitly breaks the security team's rule of having no path between environments by nature of the shared VPC. The shared VPC allows entities in both VPCs to communicate as if they were in the same VPC. That's definitely wrong.
+- D. One - not best practice to replicate in the setup in that project. Two - why do they suddenly need the project editor rule? Just a bad answer. Wrong.
 
 <hr />
 
@@ -517,7 +557,7 @@ Answer: A
 
 <hr />
 
-Question 132
+**Question 132:**
 Your management has asked an external auditor to review all the resources in a specific project. The security team has enabled the Organization Policy called Domain Restricted Sharing on the organization node by specifying only your Cloud Identity domain. You want the auditor to only be able to view, but not modify, the resources in that project. What should you do?
 
 A: Ask the auditor for their Google account, and give them the Viewer role on the project.
@@ -530,9 +570,11 @@ D: Create a temporary account for the auditor in Cloud Identity, and give that a
 
 Answer: C
 
+https://cloud.google.com/iam/docs/job-functions/auditing#scenario_external_auditors
+
 <hr />
 
-Question 133
+**Question 133:**
 You have a workload running on Compute Engine that is critical to your business. You want to ensure that the data on the boot disk of this workload is backed up regularly. You need to be able to restore a backup as quickly as possible in case of disaster. You also want older backups to be cleaned automatically to save on cost. You want to follow Google-recommended practices. What should you do?
 
 A: Create a Cloud Function to create an instance template.
@@ -547,7 +589,7 @@ Answer: B
 
 <hr />
 
-Question 134
+**Question 134:**
 You need to assign a Cloud Identity and Access Management (Cloud IAM) role to an external auditor. The auditor needs to have permissions to review your Google Cloud Platform (GCP) Audit Logs and also to review your Data Access logs. What should you do?
 
 A: Assign the auditor the IAM role roles/logging.privateLogViewer. Perform the export of logs to Cloud Storage.
@@ -560,9 +602,14 @@ D: Assign the auditor's IAM user to a custom role that has logging.privateLogEnt
 
 Answer: B
 
+- Data Access audit logs-- except for BigQuery Data Access audit logs-- are disabled by default because audit logs can be quite large.
+
+**Links:**
+https://cloud.google.com/logging/docs/audit
+
 <hr />
 
-Question 135
+**Question 135:**
 You are managing several Google Cloud Platform (GCP) projects and need access to all logs for the past 60 days. You want to be able to explore and quickly analyze the log contents. You want to follow Google-recommended practices to obtain the combined logs for all projects. What should you do?
 
 A: Navigate to Stackdriver Logging and select resource.labels.project_id="\*"
@@ -635,6 +682,13 @@ D: Use permissions in your role that use the testing support level for role perm
 
 Answer: A
 
+- ALPHA: The role is still being developed or tested, or it includes permissions for Google Cloud services or features that are not yet public. It is not ready for widespread use.
+- BETA: The role has been tested on a limited basis, or it includes permissions for Google Cloud services or features that are not generally available.
+- GA: The role has been widely tested, and all of its permissions are for Google Cloud services or features that are generally available.
+
+**Links:**
+https://cloud.google.com/iam/docs/understanding-custom-roles#testing_and_deploying
+
 <hr />
 
 Question 140
@@ -664,6 +718,14 @@ C: 1. Use the default configuration for one project you need to manage. 2. Activ
 D: 1. Use the default configuration for one project you need to manage. 2. Use gcloud init to update the configuration values when you need to work with a non-default project.
 
 Answer: A
+
+```
+// Create a configuration file
+gcloud config configurations create my-config --project=my-proj-A
+
+//To activate an existing configuration named my-config, run:
+gcloud config configurations activate my-config
+```
 
 <hr />
 
