--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -890,7 +890,22 @@ C: Create a custom Compute Engine image from a snapshot. Create your images from
 
 D: Create a custom Compute Engine image from a snapshot. Create your instances from that image.
 
-Answer: A
+Answer: A (D is correct.)
+
+- D is the correct answer,
+  you need to create an image before you create a similar instance, this will automate the creation of new instances from the image, when there is a increase in traffic. This is the concept used in MIGs for scaling up and down the instances.
+- snapshot --> image -----> creating our instance from image that we got from snapshot
+
+**Create the image from the following sources**
+
+- A persistent disk, even while that disk is attached to a VM (disk -> image --> create VM from the image)
+- A snapshot of a persistent disk (snapshot --> image --> create VM from the image)
+- Another image in your project (another image --> create VM from another image)
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/images/create-custom#prepare_instance_for_image
+2. https://cloud.google.com/compute/docs/images/create-custom#create_image
 
 <hr />
 
