--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -981,6 +981,14 @@ D: Create an Instance Template with Preemptible VMs On. Create a Managed Instanc
 
 Answer: C
 
+- Compute Engine always stops preemptible instances after they run for 24 hours. Certain actions reset this 24-hour counter.[1]
+
+- I agree with C. You can't risk running a processes that take 30 hours on a preemptible VM (Compute Engine always stops preemptible instances after they run for 24 hours). They are good for "short-lived" batch jobs. The scenario is NOT fault tolerant as the whole process restarts if interrupted.
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instances/preemptible
+
 <hr />
 
 **Question 158**
@@ -1025,6 +1033,23 @@ C: Ingest the data into Datastore. Store data in an entity group based on the de
 D: Ingest the data into Cloud Bigtable. Create a row key based on the event timestamp.
 
 Answer: D
+
+Keyword need to look for
+
+- "High Throughput",
+- "Consistent",
+- "Property based data insert/fetch like ngine status, distance traveled, fuel level, and more." which can be designed in column,
+- "Large Scale Customer Base + Each Customer has multiple sensor which send event in seconds" This will go for pera bytes situation,
+- Export data based on the time of the event.
+- Atomic
+
+- BigTable will fit all requirement.
+- DataStore is not fully Atomic
+- CloudStorage is not a option where we can export data based on time of event. We need another solution to do that
+- FireStore can be used with MobileSDK.
+
+**Links:**
+https://cloud.google.com/bigtable/docs/overview
 
 <hr />
 
