--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1066,6 +1066,14 @@ D: Enable API, create a workspace under project A, and then add projects B and C
 
 Answer: D
 
+- Keep Project A as host project in workspace and Project B and C as Service Project, and monitor the metrics of the Project A for a centralized view.
+- Monitoring -> Setting -> Add GCP Projects -> Use this project as scoping project [2]
+
+**Links:**
+
+1. https://www.youtube.com/watch?v=_FKdug6B5FM&t=195s
+2. https://cloud.google.com/monitoring/settings/multiple-projects#add-monitored-project
+
 <hr />
 
 **Question 162**
