--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1069,6 +1069,8 @@ Answer: D
 - Keep Project A as host project in workspace and Project B and C as Service Project, and monitor the metrics of the Project A for a centralized view.
 - Monitoring -> Setting -> Add GCP Projects -> Use this project as scoping project [2]
 
+![](images/161-monitoring.png)
+
 **Links:**
 
 1. https://www.youtube.com/watch?v=_FKdug6B5FM&t=195s
