--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -727,6 +727,24 @@ gcloud config configurations create my-config --project=my-proj-A
 gcloud config configurations activate my-config
 ```
 
+```
+$gcloud config configurations list
+NAME: cloudshell-30453 ##--- default config
+IS_ACTIVE: False
+ACCOUNT:
+PROJECT: react-app-demo-363711
+COMPUTE_DEFAULT_ZONE: europe-west1-d
+COMPUTE_DEFAULT_REGION:
+
+NAME: my-config ##--My config
+IS_ACTIVE: True
+ACCOUNT:
+PROJECT:
+COMPUTE_DEFAULT_ZONE:
+COMPUTE_DEFAULT_REGION:
+hiroko@cloudshell:~$
+```
+
 <hr />
 
 Question 142
@@ -1018,6 +1036,30 @@ C: In the CLI installation directory, create a file called default.conf containi
 D: Create a Metadata entry on the Compute Engine page with key compute/zone and value europe""west1""d.
 
 Answer: A
+
+gcloud config set compute/zone ZONE_NAME
+
+```
+$ gcloud config set compute/zone europe-west1-d
+Updated property [compute/zone].
+$ gcloud config list
+[accessibility]
+screen_reader = True
+[component_manager]
+disable_update_check = True
+[compute]
+gce_metadata_read_timeout_sec = 30
+zone = europe-west1-d
+[core]
+account = hiroko@hirokoymj.com
+disable_usage_reporting = True
+project = react-app-demo-363711
+[metrics]
+environment = devshell
+```
+
+**Links:**
+https://cloud.google.com/sdk/gcloud/reference/config/set
 
 <hr />
 
@@ -1321,6 +1363,13 @@ C: Use Google Kubernetes Engine and configure a CronJob to trigger the applicati
 D: Use Dataflow as a batch job, and configure the bucket as a data source.
 
 Answer: B
+
+```
+gcloud functions deploy HelloGet --triger-http
+gcloud functions deploy HelloTopic --trigger-topic=TRIGGER_TOPIC
+```
+
+https://cloud.google.com/sdk/gcloud/reference/functions/deploy
 
 <hr />
 
