--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1497,7 +1497,9 @@ D: Create a bash script that contains all requirement steps as gcloud commands.
 
 Answer: A
 
-<hr />
+-
+-
+- <hr />
 
 **Question 182**
 You are performing a monthly security check of your Google Cloud environment and want to know who has access to view data stored in your Google Cloud Project.
@@ -1512,7 +1514,9 @@ C: Review the Identity-Aware Proxy settings for each resource.
 
 D: Create a Data Loss Prevention job.
 
-Answer: B
+Answer: B (Correct is B not A - "who has access to view data")
+
+- Please read the question really carefully. The audit logs will show you who really **accessed** the data, yes! But it will not show you who has possible access to it. Therefore, you need to look into IAM permissions, which leads to answer B.
 
 <hr />
 
@@ -1529,7 +1533,16 @@ C: Configure the IP of the database as custom metadata for each instance, and qu
 
 D: Query the Compute Engine internal DNS from the applications to retrieve the IP of the database.
 
-Answer: D
+Answer: D (Correct is B)
+
+> Forwarding zones
+> Cloud DNS forwarding zones let you configure target name servers for specific private zones. Using a forwarding zone is one way to implement outbound DNS forwarding from your VPC network.
+
+> A Cloud DNS forwarding zone is a special type of Cloud DNS private zone. Instead of creating records within the zone, you specify a set of forwarding targets. Each forwarding target is an IP address of a DNS server, located in your VPC network, or in an on-premises network connected to your VPC network by Cloud VPN or Cloud Interconnect.
+
+- A does not apply, that is to provide internet access to resources
+- C, does not apply
+- D, I don't get it
 
 <hr />
 
@@ -1544,7 +1557,16 @@ C: Deploy the container on App Engine flexible environment with autoscaling, and
 
 D: Deploy the container on App Engine flexible environment with manual scaling, and set the value instances to zero in the app.yaml.
 
-Answer: C
+Answer: C(Correct is B)
+
+- I think that is B the correct answer, because Cloud Run can scale to 0:
+  And App Engine Flexible can't scale to 0, the minimum instance number is 1:
+- When a revision does not receive any traffic, by default it is scaled in to zero container instances.[1]
+- No, minimum 1 instance[2]
+  **Links:**
+
+1. https://cloud.google.com/run/docs/about-instance-autoscaling
+2. https://cloud.google.com/appengine/docs/the-appengine-environments#comparing_high-level_features
 
 <hr />
 
@@ -1579,6 +1601,8 @@ D: Ask the partner to create a Service Account in their project, and grant their
 
 Answer: D
 
+https://www.examtopics.com/discussions/google/view/46746-exam-associate-cloud-engineer-topic-1-question-165/
+
 <hr />
 
 **Question 187**
@@ -1596,6 +1620,20 @@ D: Create a new revision with the new version of the application. Add HTTP Load 
 
 Answer: B
 
+- Canary deployments are a method of releasing software to a subset of users or servers. The plan is to deliver the update to a small selection of servers first, test it, and then roll it out to the other servers.
+
+So it's a Revision or new update or a new version, not a service.
+
+- This document shows you how to implement a deployment pipeline for Cloud Run that implements progression of code from developer branches to production with automated canary testing and percentage-based traffic management. It is intended for platform administrators who are responsible for creating and managing CI/CD pipelines
+- **Links:**
+
+1. https://cloud.google.com/architecture/implementing-cloud-run-canary-deployments-git-branches-cloud-build
+
+2. https://www.youtube.com/watch?v=1gBOB5HrX64&list=PLuJRcdtonlDAN73rZsRk_eiJ0NU9h1Cms&index=28
+
+![](images/187-cloud-run.png)
+![](images/187-cloud-run-auto-deploy.png)
+
 <hr />
 
 **Question 188**
@@ -1611,7 +1649,14 @@ C: Configure an External HTTP(s) load balancer in front of the application serve
 
 D: Configure an External Network load balancer in front of the application servers.
 
-Answer: D
+Answer: D (correct)
+
+- Answer is D, cell phones are sending UDP packets and the only that can receive that type of traffic is a External Network TCP/UDP
+  https://cloud.google.com/load-balancing/docs/network
+
+Links:
+
+https://cloud.google.com/load-balancing/docs/load-balancing-overview#about
 
 <hr />
 
@@ -1642,6 +1687,14 @@ C: Place the private key file in the installation directory of the Cloud SDK and
 D: Place the private key file in your home directory and rename it to "GOOGLE_APPLICATION_CREDENTIALS".
 
 Answer: B
+
+```
+gcloud auth activate-service-account SERVICE_ACCOUNT@DOMAIN.COM --key-file=/path/key.json --project=PROJECT_ID
+```
+
+**Links:**
+
+https://cloud.google.com/sdk/gcloud/reference/auth/activate-service-account
 
 <hr />
 
