--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1673,6 +1673,9 @@ D: Use the export logs API to provide the Admin Activity Audit Logs in the forma
 
 Answer: A
 
+![](images/189-audit-log.png)
+![](images/189-view-audit-log.png)
+
 <hr />
 
 **Question 190**
