--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1544,6 +1544,12 @@ Answer: D (Correct is B)
 - C, does not apply
 - D, I don't get it
 
+- Cloud DNS offers DNS forwarding zones and DNS server policies to allow lookups of DNS names between your on-premises and Google Cloud environment.[1]
+
+Links:
+
+1. https://cloud.google.com/dns/docs/best-practices#best_practices_for_dns_forwarding_zones_and_server_policies
+
 <hr />
 
 **Question 184**
@@ -1745,6 +1751,15 @@ C: Use Cloud Spanner for data storage.
 D: Use Firestore for data storage.
 
 Answer: C
+
+- C, Cloud Spanner, keywords are globally, relational structure and lastly "clients from all over the world should get the exact identical state of the data" which implies strong consistency is needed.
+- C is correct - Relational and Global
+- Fully managed relational database with unlimited scale, strong consistency, and up to 99.999% availability.[1]
+
+**Links:**
+
+1. https://cloud.google.com/spanner
+2. https://cloud.google.com/blog/topics/developers-practitioners/your-google-cloud-database-options-explained
 
 <hr />
 
