--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1761,6 +1761,8 @@ Answer: C
 1. https://cloud.google.com/spanner
 2. https://cloud.google.com/blog/topics/developers-practitioners/your-google-cloud-database-options-explained
 
+![](images/193.png)
+
 <hr />
 
 **Question 194**
@@ -1774,7 +1776,13 @@ C: Provision Compute Engine instances with local SSDs attached.
 
 D: Provision Compute Engine instances with M1 machine type.
 
-Answer: C
+Answer: C(D is correct)
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/machine-resource
+
+![](images/194.png)
 
 <hr />
 
@@ -1791,6 +1799,11 @@ D: Create and deploy a Deployment per microservice.
 
 Answer: D
 
+- A. Custom Resource Definition... we have docker containers already, which is an established kind of resource for Kubernetes. We don't need to create a whole new type of resource, so this is wrong.
+- B. Docker Compose is a wholly different tool from Kubernetes.
+- C. A Kubernetes job describes a specific "task" which involves a bunch of pods and things. It makes no sense to have one job per microservice, a "Job" would be a bunch of different microservices executing together.
+- D. is the leftover, correct answer. You can add scaling to each Deployment, an important aspect of the question.
+
 <hr />
 
 **Question 196**
@@ -1805,6 +1818,12 @@ C: After starting the instances, use gcloud compute instances update to specify 
 D: After starting the instances, use gcloud compute instances update to assign the name of the relevant Service Account as instance metadata.
 
 Answer: A
+
+**Attaching a service account to an instance**
+
+-To avoid providing an application with excess permissions, we recommend that you create a user-managed service account, grant it only the roles your application needs to function properly,
+
+- https://cloud.google.com/compute/docs/access/service-accounts#associating_a_service_account_to_an_instance
 
 <hr />
 
@@ -1835,6 +1854,14 @@ C: Use Cloud Scheduler to schedule a batch Dataflow job to copy the data from Bi
 D: Assign the IAM role of BigQuery User to a Google Group that contains the members of the BI team.
 
 Answer: D
+
+**BigQuery Job User (roles/bigquery.jobUser)**
+
+- Provides permissions to run jobs, including queries, within the project.[1]
+
+**Links:**
+
+1. https://cloud.google.com/bigquery/docs/access-control
 
 <hr />
 
