--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1720,7 +1720,48 @@ C: Set up an on-demand backup for the first of the month. Write the backup to an
 
 D: Convert the automatic first-of-the-month backup to an export file. Write the export file to a Coldline class Cloud Storage bucket.
 
-Answer: B
+Answer: B(correct is A. B is wrong.)
+
+**Backups versus exports**
+
+- Backups are managed by Cloud SQL according to retention policies, and are stored separately from the Cloud SQL instance. Cloud SQL backups differ from an export uploaded to Cloud Storage, where you manage the lifecycle. Backups encompass the entire database. Exports can select specific contents.
+
+**Two types of backups**
+
+1. On-demand backups
+2. Automated backups
+
+**On-demand backups**
+
+- You can create a backup at **any time**.
+
+**Automated backups**
+
+- Automated backups are taken **daily**, within a 4-hour backup window.
+
+**Can I export a backup?**
+
+- No, you can't export a backup. You can only export instance data. See Exporting data from Cloud SQL.
+
+**Scheduling Cloud SQL exports using Cloud Functions and Cloud Scheduler**
+
+https://cloud.google.com/blog/topics/developers-practitioners/scheduling-cloud-sql-exports-using-cloud-functions-and-cloud-scheduler
+
+**Description**
+
+- not B: Automatic backups are made EVERY SINGLE DAY. You can set only the number of backups up to 365. Also you cannot choose your Archival storage as destination
+- not C: You cannot setup "on-demand" backup. User would have to make backups manually every month. Also you cannot choose your Archival storage as destination
+- not D: You cannot conver backup to export file. Also Coldline class is less cost-effective than Archival class.
+
+The only option left is "A"
+You can set up your job with any date/time schedule. You can export file to any storage with any storage class.
+
+**Links:**
+
+1. https://cloud.google.com/sql/docs/mysql/backup-recovery/backups
+
+![](images/191-backup.png)
+![](images/191-automatic-backup.png)
 
 <hr />
 
