--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1919,5 +1919,4 @@ D: 1. Create a VPC with a subnet for the DMZ and another VPC with a subnet for t
 
 Answer: A
 
-<hr />
-<hr />
+- A is the Right answer. You can discard B and C because they lack the need of creating Network Peering to communicate the DMZ VPC with the LAN VPC (LAN VPC is not exposed to public so they need to communicate via private addresses which cannot be achieved with 2 VPCs without Network Peering). Plus, you can discard B, as you don't need to enable the egress traffic, you always need to enable the ingress traffic as this is never enabled by default.
