--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -895,6 +895,22 @@ D: In Cloud IAM of your project, grant a newly created service account from the 
 
 Answer: B
 
+- the question said, the data needs to be visualized, it is not asking for query data.
+
+**B is the answer**
+
+- according to Google's least privilege model and question states that service account needs to have permission to access another project's BigQuery dataset.
+
+- (roles/bigquery.dataViewer) - Lowest-level resources where you can grant this role to Table to view data only for specific dataset
+
+- (roles/bigquery.jobUser) - Provides permissions to run jobs, including queries, within the project.
+
+- if so it has been assigned with jobUser it has privilege to access all datasets in that project and it is access violation
+
+Links:
+
+1. https://www.examtopics.com/discussions/google/view/28670-exam-associate-cloud-engineer-topic-1-question-130/
+
 <hr />
 
 Question 152
