--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -66,6 +66,25 @@ D: Create a new subnet with the same starting IP but a wider range to overwrite 
 
 Answer: A
 
+1. [Demo: Expand a Subnet](https://www.youtube.com/watch?v=bGZODriew7k)
+
+- how to expand a custom subnet within GCP. Current - a custom subnet with a slash 29 mask.
+- Changing the custom subnet from 10.0.0.0/29(a slash 29) to 10.0.0.0/23(a slash 23)
+- this is going to allow a lot of instances, actually over 500 instances.
+- it is easy to expand a subnet in GCP **without any workload shutdown or downtime**
+
+```
+//To expand the IP range of SUBNET to /16, run:
+gcloud compute networks subnets expand-ip-range SUBNET --region=us-central1 --prefix-length=16
+```
+
+**Links:**
+
+1. https://cloud.google.com/sdk/gcloud/reference/compute/networks/subnets/expand-ip-range
+   ![](images/103-1.png)
+   ![](images/103-2.png)
+   ![](images/103-4.png)
+
 <hr />
 
 **Question 104**
@@ -1818,7 +1837,8 @@ Answer: C
 1. https://cloud.google.com/spanner
 2. https://cloud.google.com/blog/topics/developers-practitioners/your-google-cloud-database-options-explained
 
-![](images/193.png)
+![](images/193-spanner-2.png)
+![](images/193-spanner-1.png)
 
 <hr />
 
