--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -118,6 +118,27 @@ D: Go to GCP Console and export this information to Cloud SQL on a daily basis.
 
 Answer: A
 
+```
+// To create a new named configuration, run:
+gcloud config configurations create my-config
+```
+
+```
+// To activate an existing configuration named my-config, run:
+gcloud config configurations activate my-config
+```
+
+```
+// To list all instances in a project in table form, run:
+gcloud compute instances list
+```
+
+**Links:**
+
+- https://cloud.google.com/sdk/gcloud/reference/config/configurations/create
+
+- https://cloud.google.com/sdk/gcloud/reference/config/configurations/activate
+
 <hr />
 
 **Question 106**
@@ -167,6 +188,18 @@ Answer: C
 
 https://cloud.google.com/vpc/docs/add-remove-network-tags
 
+- You are basically correct that the Request is egress and the Response is ingress.[1]
+
+- Ingress and egress rules allow you to grant access to Google Cloud resources in a perimeter based on the context of the API request:[2]
+  GCP <------ Client (ingress)
+  GCP ------> Client (egress)
+
+**Links:**
+
+1. https://stackoverflow.com/questions/46423124/how-does-google-cloud-compute-the-egress-vs-ingress-traffic
+
+2. https://cloud.google.com/vpc-service-controls/docs/ingress-egress-rules
+
 <hr />
 
 **Question 109**
@@ -192,10 +225,20 @@ https://cloud.google.com/billing/docs/how-to/budgets#create-budget
 
 **IAM**
 
-- Billing Account Administrator
-- Billing Account Costs Manager
+- Billing Account Administrator[1]
 
-<hr />
+  > billing.budgets.\*
+
+- Billing Account Costs Manager[2]
+  > billing.budgets.\*
+
+**Links:**
+
+1. https://cloud.google.com/billing/docs/how-to/billing-access#billing.admin
+
+2. https://cloud.google.com/billing/docs/how-to/billing-access#billing.costsManager
+
+  <hr />
 
 **Question 110**
 You are migrating a production-critical on-premises application that requires 96 vCPUs to perform its task. You want to make sure the application runs in a similar environment on GCP. What should you do?
