--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -270,6 +270,11 @@ D: Add a bucket lifecycle rule that archives data from regional storage after 30
 
 Answer: B
 
+- Standard(0 day), Nearline(30 days), Coldline(90 days), Archive (365 days)
+
+![](images/111-storage-classes.png)
+https://cloud.google.com/storage/docs/storage-classes
+
 <hr />
 
 **Question 112**
@@ -285,6 +290,21 @@ D: Set up Cloud VPN between the infrastructure on-premises and Google Cloud.
 
 Answer: D
 
+- Not A and B, because for network peering, shared VPC you need to either be in the same project or same organization. Here we are in on-premise and cloud.
+  Maybe C, but why do you need an extra server on both GCP and On-premise for a proxy?. We already have solutions for proxy inside GCP.
+  D is correct because, we generally connect GCP to on-premise using VPN.
+- **VPC Network Peering** - Under the two organizations
+- **Shared VPC** - Under the same organization
+- **Cloud VPN** - on-prem and GCP
+
+![](images/112-1.png)
+![](images/112-2.png)
+![](images/112-3.png)
+
+**Links:**
+
+https://cloud.google.com/hybrid-connectivity
+
 <hr />
 
 **Question 113**
@@ -299,6 +319,8 @@ C: Select Regional Storage. Add a bucket lifecycle rule that archives data after
 D: Select Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Coldline Storage.
 
 Answer: D
+
+- Standard(0 day), Nearline(30 days), Coldline(90 days), Archive (365 days)
 
 <hr />
 
@@ -316,6 +338,13 @@ C: Write a script that loops through all the projects in your organization and r
 D: Write a Cloud Dataflow job that loops through all the projects in your organization and runs a query on INFORMATION_SCHEMA.COLUMNS view to find employee_ssn column.
 
 Answer: A
+
+- Most organizations today are dealing with a large and growing number of data assets.[1]
+
+**Links:**
+
+1. https://cloud.google.com/data-catalog/docs/concepts/overview#why_do_you_need
+   ![](images/114.png)
 
 <hr />
 
