--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -344,6 +344,7 @@ Answer: A
 **Links:**
 
 1. https://cloud.google.com/data-catalog/docs/concepts/overview#why_do_you_need
+
    ![](images/114.png)
 
 <hr />
@@ -353,6 +354,8 @@ You create a Deployment with 2 replicas in a Google Kubernetes Engine cluster th
 
 What is the most likely cause?
 
+![](images/115.jpeg)
+
 A: The pending Pod's resource requests are too large to fit on a single node of the cluster.
 
 B: Too many Pods are already running in the cluster, and there are not enough resources left to schedule the pending Pod.
@@ -361,7 +364,39 @@ C: The node pool is configured with a service account that does not have permiss
 
 D: The pending Pod was originally scheduled on a node that has been preempted between the creation of the Deployment and your verification of the Pods' status. It is currently being rescheduled on a new node.
 
-Answer: B
+Answer: B (or D)
+
+- The real crux of this question is the mention about "Pre-emptible Node pool". That need to take into consider while determining the answer. If we choose B, then the importance of "Pre-emptible node pool" is not there. Whether the node pool is pre-emptible or not, resource scarcity can lead to pending pods.
+
+When we consider the mention of "Pre-emptible Node Poll" , then the answer is obviously D. if a pre-meptible Node get pre-empted there will be a delay in cluster to sync it.
+
+Answer is D.
+
+- I vote 'D'
+  B says: Too many 'Pods' are already running in the cluster, and there are not enough resources left to schedule the pending Pod.
+
+There are only 2 pods and setup as 2 pods, where is the 'too many' coming from??
+
+[2]
+
+```
+gcloud container node-pools create pvm-pool \
+  --cluster $CLUSTER_NAME \
+  --zone $CLUSTER_ZONE \
+  --scopes cloud-platform \
+  --enable-autoupgrade \
+  --preemptible \
+  --num-nodes 1 --machine-type g1-small \
+  --enable-autoscaling --min-nodes=1 --max-nodes=6
+```
+
+**Links:**
+
+1. https://cloud.google.com/blog/products/containers-kubernetes/cutting-costs-with-google-kubernetes-engine-using-the-cluster-autoscaler-and-preemptible-vms
+
+2. https://cloud.google.com/sdk/gcloud/reference/container/node-pools/create#--preemptible
+
+3. https://www.examtopics.com/discussions/google/view/22847-exam-associate-cloud-engineer-topic-1-question-94-discussion/
 
 <hr />
 
@@ -377,6 +412,8 @@ C: Go to the Stackdriver Monitoring console and review information for Cloud Spa
 D: Go to the Stackdriver Logging console, review admin activity logs, and filter them for Cloud Spanner IAM roles.
 
 Answer: D
+
+- Logs - admin activity log is correct.
 
 <hr />
 
@@ -400,8 +437,10 @@ For E, flat rate is always a more cost-effective billing plan. (if you use a lot
 
 And B, Creating a custom quota on query data to control costs at the project-level or at the user-level.
 
-Reference Links
-https://cloud.google.com/bigquery/docs/custom-quotas
+**Links:**
+
+1. https://cloud.google.com/bigquery/docs/custom-quotas
+2. https://cloud.google.com/bigquery/pricing#flat_rate_pricing
 
 <hr />
 
@@ -417,6 +456,23 @@ C: Create a GKE node pool with a sandbox type configured to gvisor. Add the para
 D: Use the cos_containerd image for your GKE nodes. Add a nodeSelector with the value cloud.google.com/gke-os-distribution: cos_containerd to the specification of your customers Pods.
 
 Answer: C
+
+- arbitrary - based on random choice or personal whim
+- GKE Sandbox uses the open source container runtime gVisor to run your containers with an extra layer of isolation [1]
+- This page describes how GKE Sandbox protects the host kernel on your nodes when containers in the Pod execute unknown or untrusted code.[2]
+
+```
+gcloud container node-pools create smt-enabled \
+  --cluster=CLUSTER_NAME \
+  --machine-type=MACHINE_TYPE \
+  --threads-per-core=2 \
+  --sandbox type=gvisor
+```
+
+**Links:**
+
+1. https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-engine-features-and-guidance-to-help-lock-down-your-containers
+2. https://cloud.google.com/kubernetes-engine/docs/concepts/sandbox-pods
 
 <hr />
 
@@ -434,6 +490,20 @@ C: Change the primary key to not have monotonically increasing values.
 D: Create a secondary index using the following Data Definition Language (DDL): CREATE INDEX person_id_ix ON Persons (person_id, firstname, lastname ) STORING ( profile_picture )
 
 Answer: D
+
+- In a Cloud Spanner database, Spanner automatically creates an index for each table's primary key. For example, you don't need to do anything to index the primary key of Singers, because it's automatically indexed for you.
+
+- You can also create secondary indexes for other columns. Adding a secondary index on a column makes it more efficient to look up data in that column. For example, if you need to quickly look up an album by title, you should create a secondary index on AlbumTitle
+
+https://cloud.google.com/spanner/docs/secondary-indexes
+
+```
+//--- To index all Singers in the database by their first and last name:
+CREATE INDEX SingersByFirstLastName ON Singers(FirstName, LastName)
+
+//--- To create an index of all Songs in the database by the value of SongName:
+CREATE INDEX SongsBySongName ON Songs(SongName)
+```
 
 <hr />
 
@@ -454,6 +524,10 @@ Answer: C
 - roles/billing.admin: Manage billing accounts (but not create them)
 - roles/billing.projectManager:Link/unlink the project to/from a billing account.
 - roles/billing.viewer : View billing account cost and pricing information, transactions, and billing
+
+**Links:**
+https://cloud.google.com/billing/docs/how-to/billing-access#overview-of-cloud-billing-roles-in-cloud-iam
+
 <hr />
 
 **Question 121**
